content/v2.0/initialize-a-cluster.md
---
title: Initialize a Cluster
summary: Perform a one-time-only initialization of a CockroachDB cluster.
toc: true
---

<span class="version-tag">New in v1.1:</span> This page explains the `cockroach init` [command](cockroach-commands.html), which you use to perform a one-time initialization of a new multi-node cluster. For a full walk-through of the cluster startup and initialization process, see one of the [Manual Deployment](manual-deployment.html) tutorials.

{{ site.data.alerts.callout_info }}When <a href="start-a-node.html#start-a-single-node-cluster">starting a single-node cluster</a>, you do not need to use the <code>cockroach init</code> command. You can simply run the <code>cockroach start</code> command without the <code>--join</code> flag to start and initialize the single-node cluster.{{ site.data.alerts.end }}


## Synopsis

~~~ shell
# Perform a one-time initialization of a cluster:
$ cockroach init <flags>

# View help:
$ cockroach init --help
~~~

## Flags

The `cockroach init` command supports the following [client connection](#client-connection) and [logging](#logging) flags.

### Client Connection

{%  include {{  page.version.version  }}/sql/connection-parameters.md %}

See [Client Connection Parameters](connection-parameters.html) for details.

### Logging

By default, the `init` command logs errors to `stderr`.

If you need to troubleshoot this command's behavior, you can change its [logging behavior](debug-and-error-logs.html).

## Examples

These examples assume that nodes have already been started with [`cockroach start`](start-a-node.html) but are waiting to be initialized as a new cluster. For a more detailed walk-through, see one of the [Manual Deployment](manual-deployment.html) tutorials.

### Initialize a Cluster on a Node's Machine

<div class="filters clearfix">
  <button style="width: 15%" class="filter-button" data-scope="secure">Secure</button>
  <button style="width: 15%" class="filter-button" data-scope="insecure">Insecure</button>
</div>

<div class="filter-content" markdown="1" data-scope="secure">
1. SSH to the machine where the node has been started.

2. Make sure the `client.root.crt` and `client.root.key` files for the `root` user are on the machine.

3. Run the `cockroach init` command with the `--certs-dir` flag set to the directory containing the `ca.crt` file and the files for the `root` user, and with the `--host` flag set to the address of the current node:

    ~~~ shell
    $ cockroach init --certs-dir=certs --host=<address of this node>
    ~~~

    At this point, all the nodes complete startup and print helpful details to the [standard output](start-a-node.html#standard-output), such as the CockroachDB version, the URL for the admin UI, and the SQL URL for clients.
</div>

<div class="filter-content" markdown="1" data-scope="insecure">
1. SSH to the machine where the node has been started.

2. Run the `cockroach init` command with the `--host` flag set to the address of the current node:

    ~~~ shell
    $ cockroach init --insecure --host=<address of this node>
    ~~~

    At this point, all the nodes complete startup and print helpful details to the [standard output](start-a-node.html#standard-output), such as the CockroachDB version, the URL for the admin UI, and the SQL URL for clients.
</div>

### Initialize a Cluster from Another Machine

<div class="filters clearfix">
  <button style="width: 15%" class="filter-button" data-scope="secure">Secure</button>
  <button style="width: 15%" class="filter-button" data-scope="insecure">Insecure</button>
</div>

<div class="filter-content" markdown="1" data-scope="secure">
1. [Install the `cockroach` binary](install-cockroachdb.html) on a machine separate from the node.

2. Create a `certs` directory and copy the CA certificate and the client certificate and key for the `root` user into the directory.

3. Run the `cockroach init` command with the `--certs-dir` flag set to the directory containing the `ca.crt` file and the files for the `root` user, and with the `--host` flag set to the address of any node:

    ~~~ shell
    $ cockroach init --certs-dir=certs --host=<address of any node>
    ~~~

    At this point, all the nodes complete startup and print helpful details to the [standard output](start-a-node.html#standard-output), such as the CockroachDB version, the URL for the admin UI, and the SQL URL for clients.
</div>

<div class="filter-content" markdown="1" data-scope="insecure">
1. [Install the `cockroach` binary](install-cockroachdb.html) on a machine separate from the node.

2. Run the `cockroach init` command with the `--host` flag set to the address of any node:

    ~~~ shell
    $ cockroach init --insecure --host=<address of any node>
    ~~~

    At this point, all the nodes complete startup and print helpful details to the [standard output](start-a-node.html#standard-output), such as the CockroachDB version, the URL for the admin UI, and the SQL URL for clients.
</div>

## See Also

- [Manual Deployment](manual-deployment.html)
- [Orchestrated Deployment](orchestration.html)
- [Local Deployment](start-a-local-cluster.html)
- [`cockroach start`](start-a-node.html)
- [Other Cockroach Commands](cockroach-commands.html)
